tests/snapshots/files__implicit-return-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 4;
  v3: int = const 15;
  call @pow v1 v3;
}
@pow(v0: int, v1: int) {
  v5: int = const 0;
  v9: int = id v0;
  v10: int = id v5;
  v11: int = id v0;
  v12: int = id v1;
  jmp .__14__;
.__55__:
  v61: int = const 1;
  v62: bool = eq v36 v61;
  v9: int = id v35;
  v10: int = id v37;
  v11: int = id v38;
  v12: int = id v39;
  br v62 .__14__ .__65__;
.__41__:
  v44: int = mul v9 v11;
  v46: int = const 1;
  v50: int = add v10 v46;
  v35: int = id v44;
  v36: int = id v46;
  v37: int = id v50;
  v38: int = id v11;
  v39: int = id v12;
  jmp .__55__;
.__28__:
  v30: int = const 0;
  v35: int = id v9;
  v36: int = id v30;
  v37: int = id v10;
  v38: int = id v11;
  v39: int = id v12;
  jmp .__55__;
.__14__:
  v16: int = const 1;
  v18: int = sub v12 v16;
  v20: bool = lt v10 v18;
  br v20 .__41__ .__28__;
.__65__:
  print v9;
}

