tests/snapshots/files__jumping_loop-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.v0_:
  v1_: int = const 0;
  v2_: int = const 18;
  v3_: int = const 4;
  v4_: int = id v1_;
  v5_: int = id v2_;
  v6_: int = id v3_;
.v7_:
  v8_: int = add v4_ v6_;
  v9_: bool = lt v8_ v5_;
  v4_: int = id v8_;
  v5_: int = id v5_;
  v6_: int = id v6_;
  br v9_ .v7_ .v10_;
.v10_:
}
