tests/snapshots/files__loop_based_code_motion-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  c2_: int = const 3;
  v3_: int = id c1_;
  v4_: int = id c2_;
.b5_:
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
  c6_: int = const 1;
  v7_: int = add c6_ v3_;
  v8_: bool = lt v7_ v4_;
  v3_: int = id v7_;
  v4_: int = id v4_;
  br v8_ .b5_ .b9_;
.b9_:
  c10_: int = const 5;
  v11_: int = mul c10_ v3_;
  print v11_;
=======
  v6_: bool = lt v3_ v4_;
  v7_: int = id v3_;
  br v6_ .b8_ .b9_;
.b8_:
  c10_: int = const 1;
  v11_: int = add c10_ v3_;
  v7_: int = id v11_;
=======
  c6_: int = const 1;
  v7_: int = add c6_ v3_;
  v8_: bool = lt v7_ v4_;
>>>>>>> cdb622b7 (snapshots)
  v3_: int = id v7_;
  v4_: int = id v4_;
  br v8_ .b5_ .b9_;
.b9_:
<<<<<<< HEAD
  v3_: int = id v7_;
  v4_: int = id v4_;
  c12_: int = const 5;
  v13_: int = mul c12_ v3_;
  print v13_;
>>>>>>> bd5b3865 (snapshots)
=======
  c10_: int = const 5;
  v11_: int = mul c10_ v3_;
  print v11_;
>>>>>>> cdb622b7 (snapshots)
=======
  v6_: bool = lt v3_ v4_;
  c7_: int = const 1;
  v8_: int = add c7_ v3_;
  v9_: int = select v6_ v8_ v3_;
  v3_: int = id v9_;
  v4_: int = id v4_;
  br v6_ .b5_ .b10_;
.b10_:
  c11_: int = const 5;
  v12_: int = mul c11_ v3_;
  print v12_;
>>>>>>> 10665900 (snapshots after rebase)
  ret;
}
